# hive_host

./: .env.exemple  .gitignore  Cargo.toml  README.md  hivehost-ssh-keys.sh  hivehost_server.service  hivehost_server_helper.service  hivehost_server_helper.socket  hivehost_server_hosting.service  init_sftp_env.sh  rebuild_server.sh  rebuild_server_dev.sh  rebuild_server_helper.sh  rebuild_server_helper_dev.sh  rebuild_server_hosting.sh  rebuild_server_hosting_dev.sh  sshd_config  start_hosting.sh  start_server.sh
common/: Cargo.toml
common/src/: command.rs  helper_command.rs  hosting.rs  hosting_action.rs  hosting_command.rs  lib.rs  multiplex_client.rs  multiplex_listener.rs  multiplex_protocol.rs  permission.rs  server.rs  server_action.rs  server_helper.rs  server_project_action.rs  tarpc_client.rs  tarpc_hosting.rs  tarpc_website_to_server.rs  website_to_server.rs
common/src/server/: server_children.rs  server_to_helper.rs  server_to_hosting.rs  tarpc_server_to_helper.rs
common/src/server_action/: permission.rs  project_action.rs  token_action.rs  user_action.rs
common/src/server_action/project_action/: git_action.rs  io_action.rs  permission.rs  snapshot.rs
common/src/server_action/project_action/io_action/: dir_action.rs  file_action.rs
common/src/server_project_action/: io_action.rs  permission.rs  snapshot.rs
common/src/server_project_action/io_action/: dir_action.rs  file_action.rs
common/src/website_to_server/: permission.rs  server_action.rs  server_project_action.rs
common/src/website_to_server/server_action/: user_action.rs
common/src/website_to_server/server_project_action/: io_action.rs  permission.rs  snapshot.rs
common/src/website_to_server/server_project_action/io_action/: dir_action.rs  file_action.rs
hivehost_hosting/: Cargo.toml
hivehost_hosting/src/: main.rs
hivehost_server/: Cargo.toml
hivehost_server/src/: cmd.rs  handle_token.rs  helper_client.rs  lib.rs  main.rs  project_action.rs  request_handler.rs  server_action.rs  tcp_listener.rs
hivehost_server_helper/: Cargo.toml
hivehost_server_helper/src/: command.rs  handler.rs  lib.rs  main.rs
hivehost_server_hosting/: Cargo.toml
hivehost_server_hosting/src/: handler.rs  lib.rs  main.rs
hivehost_website/: Cargo.toml  input.css
hivehost_website/end2end/: playwright.config.ts
hivehost_website/migrations/: 20250408230203_init.sql
hivehost_website/src/: api.rs  app.rs  github.rs  lib.rs  main.rs  models.rs  rate_limiter.rs  security.rs  tasks.rs
hivehost_website/src/app/: components.rs  pages.rs
hivehost_website/src/app/components/: csrf_field.rs  select.rs
hivehost_website/src/app/pages/: home.rs  login.rs  signup.rs  user.rs
hivehost_website/src/app/pages/user/: dashboard.rs  projects.rs  user_settings.rs
hivehost_website/src/app/pages/user/projects/: new_project.rs  project.rs
hivehost_website/src/app/pages/user/projects/project/: project_files.rs  project_settings.rs  project_snapshots.rs  project_team.rs
hivehost_website/src/app/pages/user/projects/project/project_files/: file_content_view.rs  project_files_sidebar.rs
hivehost_website/src/security/: login.rs  permission.rs  signup.rs  utils.rs
hosting/: Cargo.toml
hosting/src/: main.rs
server/: Cargo.toml
server/src/: cmd.rs  lib.rs  main.rs  project_action.rs  server_action.rs
server_config/: fstab  hivehost_server_helper.service  hivehost_server_hosting.service  init_sftp_env.sh
website/: Cargo.toml  README.md  input.css
website/end2end/: tsconfig.json
website/end2end/tests/: example.spec.ts
website/migrations/: 20250408230203_init.sql
website/src/: api.rs  app.rs  auth.rs  error_template.rs  lib.rs  main.rs  models.rs  permission.rs  projects.rs  rate_limiter.rs  security.rs  tasks.rs
website/src/app/: components.rs  pages.rs
website/src/app/components/: csrf_field.rs  logout_button.rs  select.rs
website/src/app/pages/: home.rs  login.rs  signup.rs  user.rs
website/src/app/pages/user/: dashboard.rs  projects.rs  user_info.rs  user_settings.rs
website/src/app/pages/user/projects/: new_project.rs  project.rs
website/src/app/pages/user/projects/project/: project_dashboard.rs  project_files.rs  project_settings.rs  project_team.rs
website/src/app/pages/user/projects/project/project_files/: file_content_view.rs  project_files_sidebar.rs
website/src/security/: login.rs  permission.rs  signup.rs  utils.rs
website/src/tasks/: refresh_server_csrf.rs
