cargo-features = ["profile-rustflags"]
[workspace]
resolver = "2"
members = ["website", "server", "common"]



[workspace.dependencies]
axum= "0.8.1"
serde = "1.0"
thiserror= "2.0.12"
dotenvy = "0.15.7"
tokio = "1"
tower="0.4.13"
tower-http="0.5.2"
moka="0.12.10"
secrecy = "0.10.3"
uuid = "1.16.0"
sqlx="0.8.5"



[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
rustflags=[ "--cfg","erase_components"]



[profile.release]
panic = "abort"
lto = true
opt-level = 3
codegen-units = 1
rustflags=["-Ctarget-cpu=native", "--cfg","erase_components"]
