cargo-features = ["profile-rustflags"]
[workspace]
resolver = "2"
members = ["hivehost_website", "hivehost_server", "common", "hivehost_server_hosting", "hivehost_server_helper"]



[workspace.dependencies]
axum = "0.8.3"
serde = "1.0"
serde_json = "1.0.140"
thiserror = "2.0.12"
dotenvy = "0.15.7"
dashmap = "6.1.0"
tokio = "1"
tower = "0.4.13"
tower-http = "0.5.2"
moka = "0.12.10"
secrecy = "0.10.3"
uuid = "1.16.0"
async-trait="0.1.88"
strum = "0.27.1"
strum_macros = "0.27.1"
chrono = "0.4.40"
tracing="0.1.41"
tracing-subscriber =  "0.3"
hyper="1"
http = "1.3"
regex = "1.11.1"
sqlx="0.8.5"
futures = "0.3.31"
reqwest = "0.12.15"
tarpc = {version = "0.36.0", features = ["tokio1", "serde-transport-bincode", "unix", "tcp"]}
sanitize-filename = "0.6.0"


[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
rustflags = ["--cfg", "erase_components"]



[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
lto = 'fat'
rustflags = ["-Ctarget-cpu=native", "--cfg", "erase_components"]
