[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["runtime-async-std", "postgres", "uuid", "chrono"], optional = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
thiserror = { workspace = true }
tokio = {workspace=true, optional = true, features = ["process","fs", "net", "io-util", "rt-multi-thread", "time", "sync"]}
tarpc = { workspace = true, optional = true }
tracing ={workspace = true, optional = true}
tracing-subscriber = {workspace = true, features = ["env-filter"], optional = true}


[features]
website-ssr = ["dep:sqlx"]
tarpc-website-to-server=["dep:tarpc", "website-to-server", "tarpc-client"]
tarpc-server-to-hosting=["dep:tarpc","hosting", "tarpc-client"]
tarpc-server-to-helper=["dep:tarpc", "server-to-helper", "tarpc-client"]
website-to-server=["hosting", "server-to-helper"]
hosting=[]
server-to-helper=[]
server-command=["dep:tokio"]
tarpc-client=["dep:tarpc", "dep:tracing", "dep:tracing-subscriber", "dep:tokio"]