[package]
name = "hivehost_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["macros", "json"] }
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "process"] }
tower-http = { workspace = true, features = ["fs", "compression-full", "cors"] }
moka = { workspace = true, features = ["future"] }
common = { path = "../common", features = [
    "website-to-server",
    "server-to-helper",
    "server-to-hosting",
    "multiplex-client",
    "multiplex-client-unix",
    "multiplex-listener",
    "multiplex-listener-tcp",
    "server-command",
] }
dotenvy = { workspace = true }
secrecy = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }