[package]
name = "hivehost_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["macros", "json"] }
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "process"] }
tower-http = { workspace = true, features = ["fs", "compression-full", "cors"] }
moka = { workspace = true, features = ["future"] }
tarpc = {workspace = true}
futures = { workspace = true }

common = { path = "../common", features = [
    "website-to-server",
    "tarpc-website-to-server",
    "server-to-helper",
    "tarpc-server-to-helper",
    "hosting",
    "tarpc-hosting",
    "server-command",
] }
dotenvy = { workspace = true }
secrecy = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }