[package]
name = "hivehost_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["macros", "json", "multipart", "tokio", "form"] }
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "process"] }
tower-http = { workspace = true, features = ["fs", "compression-full", "cors"] }
moka = { workspace = true, features = ["future"] }
tarpc = {workspace = true}
futures = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json"]}
dashmap = { workspace = true }
async-compression={version = "0.4.23", features = ["tokio", "gzip"]}

async-broadcast = "0.7.1"
common = { path = "../common", features = [
    "website-to-server",
    "tarpc-website-to-server",
    "server-to-helper",
    "tarpc-server-to-helper",
    "hosting",
    "tarpc-server-to-hosting",
    "server-command",
    "tarpc-client"
] }
dotenvy = { workspace = true }
secrecy = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1.16.0", features = ["v4"] }
bytes = "1.10.1"