[package]
name = "hivehost_server_helper"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
thiserror = { workspace = true }
dotenvy = { workspace = true }
common = { path = "../common", features = [  "server-to-helper","multiplex-listener", "multiplex-listener-unix","server-command"] }
async-trait = { workspace = true }
