[package]
name = "hosting"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "net",
    "time",
    "fs"
] }
hyper = { workspace = true, features = ["server", "nightly", "http1"] }
hyper-util = { version = "0.1.11", features = ["full"] }
http-body-util = "0.1.3"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
http = "1.3.1"
walkdir = "2.5.0"
dashmap = { workspace = true }
mime_guess = "2.0.5"
socket2 = { version = "0.5.9", features = ["all"] }
quick_cache = { workspace = true }
deadpool-postgres = "0.14.1"
async-compression = { version = "0.4.23", features = ["all"] }
common = { path = "../common" }
serde_json = { workspace = true }

